fixed layout bugs and horizontal scroll bars with modals

--- a/source/static/main.css
+++ b/source/static/main.css
@@ -6,7 +6,6 @@ body{
   font-family: "Roboto", "Montserrat", sans-serif;
   min-height: 2em;
   color: black;
-  width: 100%
 }
 
 h1{
